# opengl_glfw

./: .gitignore  CMakeLists.txt  build_d.cmd
first_app/: CMakeLists.txt  main.c
triangle-opengl/: CMakeLists.txt  main.c
